Allow sound name input to shrink to avoid horizontal scroll bar

--- a/src/components/sound-editor/sound-editor.css
+++ b/src/components/sound-editor/sound-editor.css
@@ -52,6 +52,10 @@
     border-right: 1px dashed $ui-black-transparent;
 }
 
+.name-input {
+    width: 100%;
+}
+
 .waveform-container {
     display: flex;
     justify-content: space-around;
